<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">


        <ImageView
            android:id="@+id/crebitImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/crebit" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/existingUser"
                android:textColor="@color/cool_black"
                android:textSize="15dp"
                android:layout_marginBottom="5dp"/>

            <EditText
                android:id="@+id/et_mobileNumber"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_edit_text"
                android:hint="  Mobile Number "
                android:imeOptions="actionNext"
                android:singleLine="true"
                android:inputType="phone"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:background="@drawable/rounded_edit_text"
                android:hint=" Password "
                android:layout_marginBottom="10dp"
                android:imeOptions="actionDone"
                android:singleLine="true"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/b_login"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/login"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/b_forgot_pass"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@string/forgotPassword"
                android:textColor="@color/blue_ivy"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="|"
                android:textColor="@color/blue_ivy"
                android:textSize="15dp"
                android:gravity="center_horizontal"
                android:layout_marginRight="20dp"/>
            <Button
                android:id="@+id/b_signUp"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:gravity="center_vertical"
                android:text="@string/signUp"
                android:textColor="@color/blue_ivy"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:background="@color/black"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bitBlue"
            android:textColor="@color/white" />
    </LinearLayout>
</RelativeLayout>