<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.bitblue.crebit.servicespage.fragments.Service">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Service"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal" />

        <ScrollView
            android:id="@+id/servicescroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/Service">

            <LinearLayout
                android:id="@+id/rl_fs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ib_postPaid"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/postpaid"/>

                        <TextView
                            android:id="@+id/tv_postPaid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/postPaid"
                            android:textColor="@color/white_smoke" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ib_prePaid"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/prepaid" />

                        <TextView
                            android:id="@+id/tv_prePaid"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prePaid"
                            android:textColor="@color/white_smoke" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ib_insurance"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/insurance" />

                        <TextView
                            android:id="@+id/tv_insurance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/insurance"
                            android:textColor="@color/white_smoke" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ib_electricity"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/electricity" />

                        <TextView
                            android:id="@+id/tv_electricity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/electricity"
                            android:textColor="@color/white_smoke" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ib_gasBill"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/postpaid" />

                        <TextView
                            android:id="@+id/tv_gasBill"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gasBill"
                            android:textColor="@color/white_smoke" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ib_broadband"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/postpaid" />

                        <TextView
                            android:id="@+id/tv_broadband"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ib_postPaid"
                            android:text="@string/broadBand"
                            android:textColor="@color/white_smoke" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ib_datacard"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/datacard" />

                        <TextView
                            android:id="@+id/tv_datacard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ib_postPaid"
                            android:text="@string/dataCard"
                            android:textColor="@color/white_smoke" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ib_dth"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/dth" />

                        <TextView
                            android:id="@+id/tv_dth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ib_postPaid"
                            android:text="@string/dth"
                            android:textColor="@color/white_smoke" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/ib_fundTransfer"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/postpaid" />

                        <TextView
                            android:id="@+id/tv_fundTransfer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/ib_postPaid"
                            android:text="@string/fundTransfer"
                            android:textColor="@color/white_smoke" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</FrameLayout>